# SimpleWebServer

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  config.h  connection_factory.h  entities.h  webserver.h
include/dao/: user_dao.h
include/entities/: user.h
src/: main.cpp
web/: dashboard.html  index.html  modal.html  modalProduct.html
web/css/: modal.css  modalProduct.css  styles.css
web/js/: index.js  modal.js
web/scripts/: index.js
web/styles/: dashboard.css  index.css  style.css
